сделал все заданий, очень интересено!

--- a/01/hw_lesson_1.ipynb
+++ b/01/hw_lesson_1.ipynb
@@ -3287,7 +3287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combine_df.to_pickle(\"./tweets.pkl\")"
+    "combine_df.to_pickle(\"tweets.pkl\")"
    ]
   },
   {
